@@ -1,3 +1,5 @@
+Mar 20, 2025: libarchive 3.7.8 released
+
 Oct 13, 2024: libarchive 3.7.7 released
 
 Sep 23, 2024: libarchive 3.7.6 released
